k8s/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-go-app
  namespace: go-app
  labels:
    app: my-go-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-go-app
  template:
    metadata:
      labels:
        app: my-go-app
    spec:
      containers:
        - name: my-go-app
          image: docker.io/app/abhay3802/my-go-app
          ports:
            - containerPort: 8080
