k8s/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-go-app-ingress
  namespace: go-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: my-go-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              services:
                name: my-go-app-service
                port:
                  number: 80
